--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,9 +8,9 @@
         android:allowBackup="true"
         android:networkSecurityConfig="@xml/network_security_config"
         tools:remove="android:dataExtractionRules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/my_tennis_team_logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/my_tennis_team_logo_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyTennisTeam"
         android:enableOnBackInvokedCallback="true"
