--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -11,23 +11,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
+
     - name: Set up JDK 17
-      uses: actions/setup-java@v3
+      uses: actions/setup-java@v4
       with:
         java-version: '17'
         distribution: 'temurin'
-    - name: Setup Android SDK
-      uses: android-actions/setup-android@v3
-      with:
-        packages: 'platforms;android-36'
-    - name: Create local.properties
-      run: echo "sdk.dir=$ANDROID_SDK_ROOT" > android/local.properties
-    - name: Grant execute permission to gradlew
-      run: chmod +x android/gradlew
-    - name: Debug ANDROID_SDK_ROOT
-      run: echo "ANDROID_SDK_ROOT is $ANDROID_SDK_ROOT"
-    - name: Debug list files in android
-      run: ls -la android
+        cache: 'gradle' # Cache Gradle dependencies for faster builds
+
+    - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+
     - name: Run tests
-      run: cd android && ./gradlew test
+      run: cd android && ./gradlew test --stacktrace
