Fix all warning messages

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="dev.ramjin.mytennisteam">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -16,7 +15,7 @@
         android:theme="@style/Theme.MyTennisTeam"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name="com.ramjin.mytennisteam.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,7 +23,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".HomeActivity"
+            android:name="com.ramjin.mytennisteam.HomeActivity"
             android:exported="true"
             android:launchMode="singleTask">
             <!-- Deep Link Intent Filter -->
