--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -13,4 +13,5 @@
 #Thu Nov 06 09:15:47 EST 2025
 android.enableJetifier=false
 android.useAndroidX=true
+org.gradle.configuration-cache=true
 org.gradle.jvmargs=-Xmx2048M -Dkotlin.daemon.jvm.options\="-Xmx2048M"
