--- a/.github/workflows/frontend-version-increment.yml
+++ b/.github/workflows/frontend-version-increment.yml
@@ -17,6 +17,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
+          fetch-depth: 0 # Fetch all history for all branches and tags
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Configure Git
