--- a/.github/workflows/backend-version-increment.yml
+++ b/.github/workflows/backend-version-increment.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   increment_backend_version:
-    if: "!contains(github.event.head_commit.message, '[skip ci]')"
+    if: "startsWith(github.event.head_commit.message, 'Merge pull request') && !contains(github.event.head_commit.message, '[skip ci]')"
     runs-on: ubuntu-latest
     permissions:
       contents: write # Grant write permission to push changes
