--- a/.github/workflows/backend-version-increment.yml
+++ b/.github/workflows/backend-version-increment.yml
@@ -18,7 +18,12 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0 # Fetch all history for all branches and tags
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.MY_ADMIN_PAT }}
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
 
       - name: Configure Git
         run: |
@@ -29,4 +34,4 @@ jobs:
         run: |
           cd backend
           npm version minor -m "Chore(backend): auto-increment minor version to %s [skip ci]"
-          git push --follow-tags
+          git push origin HEAD:main --follow-tags
