--- a/.github/workflows/frontend-version-increment.yml
+++ b/.github/workflows/frontend-version-increment.yml
@@ -12,13 +12,15 @@ jobs:
     if: "startsWith(github.event.head_commit.message, 'Merge pull request') && !contains(github.event.head_commit.message, '[skip ci]')"
     runs-on: ubuntu-latest
     permissions:
-      contents: write # Grant write permission to push changes
+      contents: write # Grant write permission to read/write contents and push
+      pull-requests: write # Allow creating pull requests
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
           ref: main
           fetch-depth: 0 # Fetch all history for all branches and tags
+          persist-credentials: true
           token: ${{ secrets.MY_ADMIN_PAT }}
 
       - name: Setup Node.js
@@ -31,8 +33,101 @@ jobs:
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
 
-      - name: Increment frontend version
+      - name: Increment frontend version and open PR
+        id: bump_and_push
         run: |
+          set -e
           cd frontend
+
+          BRANCH_NAME="version-bump/frontend-${GITHUB_RUN_ID}"
+          echo "BRANCH_NAME=$BRANCH_NAME" >> $GITHUB_ENV
+
+          git checkout -b "$BRANCH_NAME"
+          echo "Current git branch and status"
+          git branch --show-current || true
+          git status --porcelain --branch || true
+          git remote -v
+
           npm version minor -m "Chore(frontend): auto-increment minor version to %s [skip ci]"
-          git push --follow-tags
+
+          # Fallback: if npm didn't create a commit, add and commit changes explicitly
+          if [[ -n "$(git status --porcelain)" ]]; then
+            echo "Uncommitted changes present, committing them"
+            git add -A
+            git commit -m "Chore(frontend): auto-increment minor version [skip ci]" || true
+          fi
+          echo "New commit:"
+          git --no-pager log -1 --decorate --pretty=format:'%H %s'
+          git --no-pager show --name-only --pretty="" HEAD
+          NEW_VERSION=$(node -p "require('./package.json').version")
+          echo "NEW_VERSION=$NEW_VERSION" >> $GITHUB_ENV
+
+      - name: Push bump branch to origin
+        run: |
+          set -e
+          cd frontend
+          git push origin "$BRANCH_NAME" --follow-tags
+
+      - name: Create Pull Request for frontend version bump
+        id: create_pr
+        uses: peter-evans/create-pull-request@v5
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          commit-message: "Chore(frontend): auto-increment minor version to v${{ env.NEW_VERSION }} [skip ci]"
+          title: "Chore(frontend): auto-increment minor version to v${{ env.NEW_VERSION }} [skip ci]"
+          body: "Auto-generated PR to bump frontend version to v${{ env.NEW_VERSION }}"
+          base: main
+          head: ${{ env.BRANCH_NAME }}
+          labels: "auto-version-bump"
+
+      - name: Enable auto-merge for frontend PR
+        uses: peter-evans/enable-pull-request-automerge@v2
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          pull-request-number: ${{ steps.create_pr.outputs.pull-request-number }}
+          merge-method: squash
+
+      - name: Print PR mergeable state (for debugging)
+        run: |
+          apt-get update && apt-get install -y jq
+          PR=${{ steps.create_pr.outputs.pull-request-number }}
+          echo "PR number: $PR"
+          # Let GitHub compute mergeable state
+          sleep 10
+          curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" https://api.github.com/repos/${{ github.repository }}/pulls/$PR | jq -r '.mergeable_state'
+
+      - name: Wait for PR checks and mergeability
+        id: wait_for_checks
+        run: |
+          apt-get update && apt-get install -y jq
+          PR=${{ steps.create_pr.outputs.pull-request-number }}
+          echo "PR number: $PR"
+          OWNER_REPO=${{ github.repository }}
+          TOKEN="${{ secrets.GITHUB_TOKEN }}"
+          MAX_TRIES=40
+          SLEEP_SECONDS=30
+          ready=false
+          for i in $(seq 1 $MAX_TRIES); do
+            echo "Attempt $i: fetching PR and commit statuses"
+            PR_JSON=$(curl -s -H "Authorization: Bearer $TOKEN" https://api.github.com/repos/$OWNER_REPO/pulls/$PR)
+            HEAD_SHA=$(echo "$PR_JSON" | jq -r '.head.sha')
+            MERGEABLE_STATE=$(echo "$PR_JSON" | jq -r '.mergeable_state')
+            COMBINED_STATE=$(curl -s -H "Authorization: Bearer $TOKEN" https://api.github.com/repos/$OWNER_REPO/commits/$HEAD_SHA/status | jq -r '.state')
+            echo "mergeable_state=$MERGEABLE_STATE combined_state=$COMBINED_STATE"
+            if [ "$COMBINED_STATE" = "success" ] && [ "$MERGEABLE_STATE" = "clean" ]; then
+              ready=true
+              echo "All checks are passing and PR is mergeable"
+              break
+            fi
+            echo "Not mergeable yet. Sleeping $SLEEP_SECONDS seconds..."
+            sleep $SLEEP_SECONDS
+          done
+          echo "ready=$ready" >> $GITHUB_OUTPUT
+
+      - name: Merge PR when checks are passing (or skip)
+        if: steps.wait_for_checks.outputs.ready == 'true'
+        uses: peter-evans/merge-pull-request@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          pull-request-number: ${{ steps.create_pr.outputs.pull-request-number }}
+          merge-method: squash
