--- a/.github/workflows/android-version-increment.yml
+++ b/.github/workflows/android-version-increment.yml
@@ -78,16 +78,8 @@ jobs:
           head: ${{ env.BRANCH_NAME }}
           labels: "auto-version-bump"
 
-      - name: Debug PR number
-        if: steps.check_version.outputs.manual_bump == 'false'
-        run: echo "create_pr.pull-request-number='${{ steps.create_pr.outputs.pull-request-number }}'"
-
-      - name: No PR created - skip auto-merge
-        if: ${{ steps.check_version.outputs.manual_bump == 'false' && (steps.create_pr.outputs.pull-request-number == '' || steps.create_pr.outputs.pull-request-number == '0') }}
-        run: echo "No PR created by create-pull-request (maybe no changes). Skipping auto-merge steps."
-
       - name: Enable auto-merge for android PR
-        if: ${{ steps.check_version.outputs.manual_bump == 'false' && steps.create_pr.outputs.pull-request-number != '' && steps.create_pr.outputs.pull-request-number != '0' }}
+        if: steps.check_version.outputs.manual_bump == 'false'
         uses: peter-evans/enable-pull-request-automerge@v2
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
@@ -95,7 +87,7 @@ jobs:
           merge-method: squash
 
       - name: Print PR mergeable state (for debugging)
-        if: ${{ steps.check_version.outputs.manual_bump == 'false' && steps.create_pr.outputs.pull-request-number != '' && steps.create_pr.outputs.pull-request-number != '0' }}
+        if: steps.check_version.outputs.manual_bump == 'false'
         run: |
           apt-get update && apt-get install -y jq
           PR=${{ steps.create_pr.outputs.pull-request-number }}
@@ -105,7 +97,7 @@ jobs:
           curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" https://api.github.com/repos/${{ github.repository }}/pulls/$PR | jq -r '.mergeable_state'
 
       - name: Wait for PR checks and mergeability
-        if: ${{ steps.check_version.outputs.manual_bump == 'false' && steps.create_pr.outputs.pull-request-number != '' && steps.create_pr.outputs.pull-request-number != '0' }}
+        if: steps.check_version.outputs.manual_bump == 'false'
         id: wait_for_checks
         run: |
           apt-get update && apt-get install -y jq
@@ -134,7 +126,7 @@ jobs:
           echo "ready=$ready" >> $GITHUB_OUTPUT
 
       - name: Merge PR when checks are passing (or skip)
-        if: ${{ steps.check_version.outputs.manual_bump == 'false' && steps.create_pr.outputs.pull-request-number != '' && steps.create_pr.outputs.pull-request-number != '0' && steps.wait_for_checks.outputs.ready == 'true' }}
+        if: steps.check_version.outputs.manual_bump == 'false' && steps.wait_for_checks.outputs.ready == 'true'
         uses: actions/github-script@v6
         env:
           PR_NUMBER: ${{ steps.create_pr.outputs.pull-request-number }}
