--- a/.github/workflows/android-version-increment.yml
+++ b/.github/workflows/android-version-increment.yml
@@ -9,6 +9,7 @@ on:
 
 jobs:
   increment_version:
+    if: ${{ startsWith(github.event.head_commit.message, 'Merge pull request') && !contains(github.event.head_commit.message, '[skip ci]') }}
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -16,28 +17,26 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
+          ref: main
+          fetch-depth: 0
           token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: 'gradle'
 
       - name: Configure Git
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
 
-      - name: Check for manual version bump
-        id: check_version
-        run: |
-          # Get the last commit message
-          commit_message=$(git log -1 --pretty=%B)
-
-          # Check if the commit message contains "bump version"
-          if [[ "$commit_message" == *"bump version"* ]]; then
-            echo "manual_bump=true" >> $GITHUB_OUTPUT
-          else
-            echo "manual_bump=false" >> $GITHUB_OUTPUT
-          fi
+      - name: Grant execute permission for gradlew
+        run: chmod +x android/gradlew
 
       - name: Increment version
-        if: steps.check_version.outputs.manual_bump == 'false'
         run: |
           cd android
           ./gradlew incrementVersion
