--- a/.github/workflows/frontend-version-increment.yml
+++ b/.github/workflows/frontend-version-increment.yml
@@ -19,7 +19,7 @@ jobs:
         with:
           ref: main
           fetch-depth: 0 # Fetch all history for all branches and tags
-          token: ${{ secrets.GITHUB_TOKEN }}
+          ssh-key: ${{ secrets.DEPLOY_KEY }}
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
