--- a/.github/workflows/android-version-increment.yml
+++ b/.github/workflows/android-version-increment.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           ref: main
           fetch-depth: 0
-          ssh-key: ${{ secrets.DEPLOY_KEY }}
+          token: ${{ secrets.MY_ADMIN_PAT }}
 
       - name: Set up JDK 17
         uses: actions/setup-java@v4
