--- a/.github/workflows/frontend-version-increment.yml
+++ b/.github/workflows/frontend-version-increment.yml
@@ -12,14 +12,15 @@ jobs:
     if: ${{ startsWith(github.event.head_commit.message, 'Merge pull request') && !contains(github.event.head_commit.message, '[skip ci]') }}
     runs-on: ubuntu-latest
     permissions:
-      contents: write # Grant write permission to push changes
+      contents: write
+      pull-requests: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
           ref: main
           fetch-depth: 0 # Fetch all history for all branches and tags
-          ssh-key: ${{ secrets.DEPLOY_KEY }}
+          token: ${{ secrets.MY_ADMIN_PAT }}
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -31,8 +32,41 @@ jobs:
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
 
-      - name: Increment frontend version
+      - name: Increment frontend version and commit changes
+        id: increment
         run: |
           cd frontend
-          npm version minor -m "Chore(frontend): auto-increment minor version to %s [skip ci]"
-          git push --follow-tags
+          # Run npm version and capture the new version
+          new_version=$(npm version minor -m "Chore(frontend): auto-increment minor version to %s [skip ci]" | sed 's/v//')
+          echo "new_version=$new_version" >> $GITHUB_OUTPUT
+
+      - name: Create Pull Request
+        id: cpr
+        uses: peter-evans/create-pull-request@v6
+        with:
+          token: ${{ secrets.MY_ADMIN_PAT }}
+          commit-message: "Chore(frontend): auto-increment minor version to ${{ steps.increment.outputs.new_version }} [skip ci]"
+          branch: version-bump/frontend-${{ github.run_number }}
+          delete-branch: true
+          title: "🤖 Auto-increment Frontend version to ${{ steps.increment.outputs.new_version }}"
+          body: |
+            ## Automated Version Increment
+            
+            This PR was automatically created by the version increment workflow.
+            
+            **New Version:** `${{ steps.increment.outputs.new_version }}`
+            **Triggered by:** ${{ github.event.head_commit.message }}
+            
+            This PR will auto-merge once all checks pass.
+          labels: |
+            automated
+            version-bump
+            frontend
+
+      - name: Enable Pull Request Auto-merge
+        if: steps.cpr.outputs.pull-request-operation == 'created'
+        run: |
+          gh pr merge --auto --squash "${{ steps.cpr.outputs.pull-request-number }}"
+        env:
+          GH_TOKEN: ${{ secrets.MY_ADMIN_PAT }}
+
