--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -3,8 +3,12 @@ name: Android CI
 on:
   push:
     branches: [ main ]
+    paths:
+      - 'android/**'
   pull_request:
     branches: [ main ]
+    paths:
+      - 'android/**'
 
 jobs:
   tests:
@@ -19,10 +23,12 @@ jobs:
       with:
         java-version: '17'
         distribution: 'temurin'
-        cache: 'gradle' # Cache Gradle dependencies for faster builds
+        cache: 'gradle'
 
     - name: Grant execute permission for gradlew
       run: chmod +x android/gradlew
 
     - name: Run tests
       run: cd android && ./gradlew test --stacktrace
+
+
