--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -3,12 +3,8 @@ name: Android CI
 on:
   push:
     branches: [ main ]
-    paths:
-      - 'android/**'
   pull_request:
     branches: [ main ]
-    paths:
-      - 'android/**'
 
 jobs:
   tests:
@@ -17,8 +13,20 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+
+    - name: Check for changes
+      id: check_changes
+      run: |
+        if git diff --name-only origin/main HEAD | grep "^android/"; then
+          echo "changes_detected=true" >> $GITHUB_OUTPUT
+        else
+          echo "changes_detected=false" >> $GITHUB_OUTPUT
+        fi
 
     - name: Set up JDK 17
+      if: steps.check_changes.outputs.changes_detected == 'true'
       uses: actions/setup-java@v4
       with:
         java-version: '17'
@@ -26,9 +34,11 @@ jobs:
         cache: 'gradle'
 
     - name: Grant execute permission for gradlew
+      if: steps.check_changes.outputs.changes_detected == 'true'
       run: chmod +x android/gradlew
 
     - name: Run tests
+      if: steps.check_changes.outputs.changes_detected == 'true'
       run: cd android && ./gradlew test --stacktrace
 
 
