--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -3,12 +3,8 @@ name: Frontend CI
 on:
   push:
     branches: [ main ]
-    paths:
-      - 'frontend-react/**'
   pull_request:
     branches: [ main ]
-    paths:
-      - 'frontend-react/**'
 
 jobs:
   tests:
@@ -17,13 +13,28 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+
+    - name: Check for changes
+      id: check_changes
+      run: |
+        if git diff --name-only origin/main HEAD | grep "^frontend-react/"; then
+          echo "changes_detected=true" >> $GITHUB_OUTPUT
+        else
+          echo "changes_detected=false" >> $GITHUB_OUTPUT
+        fi
+
     - name: Use Node.js
+      if: steps.check_changes.outputs.changes_detected == 'true'
       uses: actions/setup-node@v4
       with:
         node-version: '20'
     - name: Install dependencies
+      if: steps.check_changes.outputs.changes_detected == 'true'
       run: cd frontend-react && npm install
     - name: Run tests
+      if: steps.check_changes.outputs.changes_detected == 'true'
       run: cd frontend-react && npm test
 
 
