--- a/.github/workflows/frontend-version.yml
+++ b/.github/workflows/frontend-version.yml
@@ -46,4 +46,7 @@ jobs:
           commit_msg="$commit_msg"$'\n'"- Frontend: ${{ steps.frontend_version.outputs.version }}"
           git commit -m "$commit_msg"
           git tag ${{ steps.frontend_version.outputs.tag }}
+          
+          # Pull latest changes with rebase to handle concurrent updates
+          git pull --rebase origin main
           git push origin main --tags
