feat: Add initial CI workflows for Android, Backend, and Frontend projects.

--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -3,6 +3,8 @@ name: Frontend CI
 on:
   push:
     branches: [ main ]
+    paths:
+      - 'frontend-react/**'
   pull_request:
     branches: [ main ]
 
